--- a/healco.html
+++ b/healco.html
@@ -134,7 +134,7 @@
                 <div class="work_box-text">
                     <div class="work_box-text-contain">
                         <h2 class="work_box-text-header">Website Redesign</h2>
-                        <p class="work_box-text-para">The biggest issue with HealCo's website was the lack of information. Users had no idea what HealCo did, how it worked, and whether or not HealCo was a legitimate service. Before coming up with a design, I figured out the questions that users ask before committing to a product or service. This was how I would determine the necessary information that the website would provide to the suers.</p>
+                        <p class="work_box-text-para">The biggest issue with HealCo's website was the lack of information. Users had no idea what HealCo did, how it worked, and whether or not HealCo was a legitimate service. Before coming up with a design, I figured out the questions that users ask before committing to a product or service. This was how I would determine the necessary information that the website would provide to the users.</p>
                     </div>
                 </div>
                 <div>
