--- a/healco.html
+++ b/healco.html
@@ -11,7 +11,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap');
     </style>
-        <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="images/logo2.png">
 </head>
 
 <body>
